Fixed list points in projects page to be next to text, added possibility for dark mode

--- a/public/mystyle.css
+++ b/public/mystyle.css
@@ -94,15 +94,32 @@
   font-size: 42px;
 }
 
+ul {
+  margin-left: 0; 
+  padding-left:0;
+  list-style-type: disc;
+  list-style-position: inside;
+
+}
+
+body {
+  min-height:100vh;
+}
+
+/* Dark theme */
+body.dark {
+  background-color: rgb(30,34,39);
+  color: #fff;
+}
+
 /* Project Boards on project page */
 #stoBorads {
     background-color: white;
     box-sizing: border-box;
-    flex: 0 0 auto;
-    position: relative;
+    position:  relative;
     margin-left: 1px;
-    margin-bottom: 55px;
+    margin-bottom: 5em;
     /* margin: 0 10px 10px 20px; */
     padding: 15px;
-    padding-bottom: 2rem;
+    padding-bottom: 1em;
 }
